--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -76,7 +76,7 @@
 				    _In_reads_bytes_(nbyte) const void *buf, \
 				    size_t nbyte); }
 5	AUE_OPEN_RWTC	NOPROTO	{ int open(_In_z_ const char *path, int flags, \
-				    int mode); }
+				    mode_t mode); }
 6	AUE_CLOSE	NOPROTO	{ int close(int fd); }
 7	AUE_WAIT4	NOPROTO	{ int wait4(int pid, _Out_opt_ int *status, \
 				    int options, \
@@ -88,10 +88,10 @@
 11	AUE_NULL	OBSOL	execv
 12	AUE_CHDIR	NOPROTO	{ int chdir(_In_z_ const char *path); }
 13	AUE_FCHDIR	NOPROTO	{ int fchdir(int fd); }
-14	AUE_MKNOD	NOPROTO	{ int mknod(_In_z_ const char *path, int mode, \
-				    int dev); }
+14	AUE_MKNOD	NOPROTO	{ int mknod(_In_z_ const char *path, \
+				    mode_t mode, dev_t dev); }
 15	AUE_CHMOD	NOPROTO	{ int chmod(_In_z_ const char *path, \
-				    int mode); }
+				    mode_t mode); }
 16	AUE_CHOWN	NOPROTO	{ int chown(_In_z_ const char *path, int uid, \
 				    int gid); }
 17	AUE_NULL	OBSOL	obreak
@@ -180,8 +180,7 @@
 				    _In_z_ const char *fname, \
 				    _In_ struct chericap *argv, \
 				    _In_ struct chericap *envv); }
-60	AUE_UMASK	NOPROTO	{ int umask(int newmask); } umask \
-				    umask_args int
+60	AUE_UMASK	NOPROTO	{ mode_t umask(mode_t newmask); }
 61	AUE_CHROOT	NOPROTO	{ int chroot(_In_z_ const char *path); }
 62	AUE_FSTAT	OBSOL	fstat
 63	AUE_NULL	OBSOL	ogetkerninfo
@@ -293,7 +292,7 @@
 				    _In_ struct timeval *tv, \
 				    _In_opt_ struct timezone *tzp); }
 123	AUE_FCHOWN	NOPROTO	{ int fchown(int fd, int uid, int gid); }
-124	AUE_FCHMOD	NOPROTO	{ int fchmod(int fd, int mode); }
+124	AUE_FCHMOD	NOPROTO	{ int fchmod(int fd, mode_t mode); }
 125	AUE_RECVFROM	OBSOL	orecvfrom
 126	AUE_SETREUID	NOPROTO	{ int setreuid(int ruid, int euid); }
 127	AUE_SETREGID	NOPROTO	{ int setregid(int rgid, int egid); }
@@ -303,7 +302,7 @@
 130	AUE_FTRUNCATE	OBSOL	ftruncate
 131	AUE_FLOCK	NOPROTO	{ int flock(int fd, int how); }
 132	AUE_MKFIFO	NOPROTO	{ int mkfifo(_In_z_ const char *path, \
-				    int mode); }
+				    mode_t mode); }
 133	AUE_SENDTO	NOPROTO	{ int sendto(int s, \
 				    _In_reads_bytes_(len) caddr_t buf, \
 				    size_t len, int flags, \
@@ -313,7 +312,7 @@
 135	AUE_SOCKETPAIR	NOPROTO	{ int socketpair(int domain, int type, \
 				    int protocol, _Out_writes_(2) int *rsv); }
 136	AUE_MKDIR	NOPROTO	{ int mkdir(_In_z_ const char *path, \
-				    int mode); }
+				    mode_t mode); }
 137	AUE_RMDIR	NOPROTO	{ int rmdir(_In_z_ const char *path); }
 138	AUE_UTIMES	NOPROTO	{ int utimes(_In_z_ const char *path, \
 				    _In_ struct timeval *tptr); }
