--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -846,17 +846,17 @@
 				    _In_opt_ struct sigaction_c *act, \
 				    _Out_opt_ struct sigaction_c *oact); }
 417	AUE_SIGRETURN	STD	{ int cheriabi_sigreturn( \
-		    _In_ const struct ucontext_c *sigcntxp); }
+		    _In_ const ucontext_t_c *sigcntxp); }
 418	AUE_NULL	UNIMPL	__xstat
 419	AUE_NULL	UNIMPL	__xfstat
 420	AUE_NULL	UNIMPL	__xlstat
 421	AUE_NULL	STD	{ int cheriabi_getcontext( \
-				    _Out_ struct ucontext_c *ucp); }
+				    _Out_ ucontext_t_c *ucp); }
 422	AUE_NULL	STD	{ int cheriabi_setcontext( \
-				    _In_ const struct ucontext_c *ucp); }
+				    _In_ const ucontext_t_c *ucp); }
 423	AUE_NULL	STD	{ int cheriabi_swapcontext( \
-				    _Out_ struct ucontext_c *oucp, \
-				    _In_ const struct ucontext_c *ucp); }
+				    _Out_ ucontext_t_c *oucp, \
+				    _In_ const ucontext_t_c *ucp); }
 424	AUE_SWAPOFF	NOPROTO	{ int swapoff(_In_z_ const char *name); }
 425	AUE_NULL	NOPROTO	{ int __acl_get_link(_In_z_ const char *path, \
 				    acl_type_t type, _Out_ struct acl *aclp); }
@@ -871,7 +871,7 @@
 429	AUE_SIGWAIT	NOPROTO	{ int sigwait(_In_ const sigset_t *set, \
 				    _Out_ int *sig); }
 430	AUE_NULL	STD	{ int cheriabi_thr_create( \
-				    _In_ ucontext_t *ctx, \
+				    _In_ ucontext_t_c *ctx, \
 				    _Out_ long *id, int flags); }
 431	AUE_NULL	NOPROTO	{ void thr_exit(_Out_opt_ long *state); }
 432	AUE_NULL	NOPROTO	{ int thr_self(_Out_ long *id); }
