--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -557,7 +557,7 @@
 				    mode_t mode); }
 275	AUE_LCHOWN	UNIMPL	netbsd_lchown
 276	AUE_LUTIMES	NOPROTO	{ int lutimes(_In_z_ const char *path, \
-				    _In_ struct timeval *tptr); }
+				    _In_ const struct timeval *tptr); }
 277	AUE_MSYNC	UNIMPL	netbsd_msync
 ; XXX-BD: why are these not COMPAT#?  struct nstat isn't even defined in
 ; userspace.
@@ -1065,7 +1065,7 @@
 				    _Out_ struct stat *buf, int flag); }
 494	AUE_FUTIMESAT	NOPROTO	{ int futimesat(int fd, \
 				    _In_z_ const char *path, \
-				    _In_reads_(2) struct timeval *times); }
+				    _In_reads_(2) const struct timeval *times); }
 495	AUE_LINKAT	NOPROTO	{ int linkat(int fd1, \
 				    _In_z_ const char *path1, \
 				    int fd2, _In_z_ const char *path2, \
@@ -1129,7 +1129,7 @@
 				    _Out_writes_z_(namelen) char *namebuf, \
 				    size_t namelen); }
 524	AUE_NULL	NOPROTO	{ int setloginclass( \
-				    _In_z_ const const char *namebuf); }
+				    _In_z_ const char *namebuf); }
 525	AUE_NULL	NOPROTO	{ int rctl_get_racct( \
 				    _In_reads_bytes_(inbuflen) \
 				    const void *inbufp, size_t inbuflen, \
@@ -1207,7 +1207,8 @@
 				    _In_opt_ const struct timespec *ts, \
 				    _In_opt_ const sigset_t *set); }
 546	AUE_FUTIMES	NOPROTO	{ int futimens(int fd, \
-				    _In_reads_(2) struct timespec *times); }
+				    _In_reads_(2) \
+				    const struct timespec *times); }
 547	AUE_FUTIMESAT	NOPROTO	{ int utimensat(int fd, \
 				    _In_z_ const char *path, \
 				    _In_reads_(2) \
